--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,17 @@ body {
   font-size: 1.5rem;
   border: 1px solid #C4C4C4;
   border-radius: 4px;
+  -webkit-transition: background-color 1s ease-out;
+  -moz-transition: background-color 1s ease-out;
+  -o-transition: background-color 1s ease-out;
+  transition: background-color 1s ease-out;
+  box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034), 0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06), 0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086), 0 100px 80px rgba(0, 0, 0, 0.12);
+}
+.wrapper .number button {
+  cursor: pointer;
+}
+.wrapper .number button:hover {
+  background: #ccc;
 }
 .wrapper .number__result {
   grid-area: result;
@@ -37,15 +48,30 @@ body {
 }
 .wrapper .number__clear {
   grid-area: clear;
+  background: #7d2ae8;
+  color: #fff;
+}
+.wrapper .number__clear:hover {
+  background: #7a7c88 !important;
 }
 .wrapper .number__zero {
   grid-area: zero;
 }
 .wrapper .number__divide {
   grid-area: divide;
+  background: #7d2ae8;
+  color: #fff;
+}
+.wrapper .number__divide:hover {
+  background: #7a7c88 !important;
 }
 .wrapper .number__multiply {
   grid-area: multiply;
+  background: #7d2ae8;
+  color: #fff;
+}
+.wrapper .number__multiply:hover {
+  background: #7a7c88 !important;
 }
 .wrapper .number__seven {
   grid-area: seven;
@@ -58,6 +84,11 @@ body {
 }
 .wrapper .number__subtract {
   grid-area: subtract;
+  background: #7d2ae8;
+  color: #fff;
+}
+.wrapper .number__subtract:hover {
+  background: #7a7c88 !important;
 }
 .wrapper .number__four {
   grid-area: four;
@@ -70,6 +101,11 @@ body {
 }
 .wrapper .number__addition {
   grid-area: addition;
+  background: #7d2ae8;
+  color: #fff;
+}
+.wrapper .number__addition:hover {
+  background: #7a7c88 !important;
 }
 .wrapper .number__one {
   grid-area: one;
@@ -82,6 +118,11 @@ body {
 }
 .wrapper .number__answer {
   grid-area: answer;
+  background: #7d2ae8;
+  color: #fff;
+}
+.wrapper .number__answer:hover {
+  background: #7a7c88 !important;
 }
 
 /*# sourceMappingURL=style.css.map */
